<resources>
    <string name="app_name">TestTechniqueResto</string>

    <string name="search">Rechercher</string>

    <string name="available_at">pour</string>
    <string name="new_restaurant">NEW</string>

    <string name="prepare_time">Préparé en %d min</string>
    <string name="see_menu">Voir le site du restaurant</string>

    <string name="distance">%s&#160;&#160;&#160;|&#160;&#160;&#160;%d min</string>

    <!-- Content description -->
    <string name="restaurant_image_description">Photo du restaurant</string>
    <string name="restaurant_logo_image_description">Logo du restaurant</string>
    <string name="restaurant_phone_image_description">Numéro de téléphone du restaurant</string>
    <string name="back_description">Retour à la liste</string>

    <!-- Errors -->
    <string name="check_internet_connexion">Véfifiez votre connexion internet</string>
</resources>