<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="restaurant"
            type="com.example.testtechniqueresto.models.Restaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_item_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@color/white">

        <ImageView
            android:id="@+id/restaurant_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/restaurant_image_description"
            android:minHeight="@dimen/main_image_height"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:visibility="@{restaurant.new? View.VISIBLE : View.GONE}"
            android:text="@string/new_restaurant" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <LinearLayout
            android:id="@+id/available_time_linear_layout"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/available_at_height"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/available_at_top_text_height"
                android:gravity="center"
                android:text="@string/available_at"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/available_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/dark_gray"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="14:53" />

        </LinearLayout>

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@{restaurant.name}"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_time_linear_layout"
            tools:text="231 East Street Ponthieu" />

        <TextView
            android:id="@+id/distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            tools:text="1.1 km | 19 min" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>