<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="restaurant"
            type="com.example.testtechniqueresto.models.Restaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RestaurantDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <ImageView
            android:id="@+id/restaurant_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/restaurant_image_description"
            android:minHeight="@dimen/main_image_height"
            android:scaleType="centerCrop"
            android:transitionName="mainImage"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/new_restaurant"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="@{restaurant.new? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/back_description"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:contentDescription="@string/restaurant_logo_image_description"
            android:transitionName="logo"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
            tools:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@{restaurant.name}"
            android:textColor="@color/dark_gray"
            android:textSize="26sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view"
            tools:text="231 East Street Ponthieu" />

        <TextView
            android:id="@+id/distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:textColor="@color/gray"
            android:transitionName="distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            tools:text="1.1 km | 19 min" />

        <View
            android:id="@+id/separator_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/huge_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/huge_margin"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance_text_view" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/phone_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/big_margin"
                    android:paddingBottom="@dimen/small_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:contentDescription="@string/restaurant_phone_image_description"
                        android:src="@drawable/ic_baseline_local_phone_24"
                        app:tint="@color/dark_gray" />

                    <TextView
                        android:id="@+id/phone_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@{restaurant.phone}"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="04 00 99 00 99" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/prepare_time_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/big_margin"
                    android:paddingBottom="@dimen/small_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:contentDescription="@string/restaurant_phone_image_description"
                        android:src="@drawable/ic_baseline_access_time_24"
                        app:tint="@color/dark_gray" />

                    <TextView
                        android:id="@+id/prepare_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="Préparé en 5 min" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/website_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/big_margin"
                    android:paddingBottom="@dimen/small_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:contentDescription="@string/restaurant_phone_image_description"
                        android:src="@drawable/ic_baseline_web_24"
                        app:tint="@color/dark_gray" />

                    <TextView
                        android:id="@+id/website_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/see_menu"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="UseCompatTextViewDrawableXml" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/address_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/big_margin"
                    android:paddingBottom="@dimen/small_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:contentDescription="@string/restaurant_phone_image_description"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="@color/dark_gray" />

                    <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@{restaurant.address.formated}"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="123 rue Quelque Part 75001 Paris" />

                </LinearLayout>

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_height"
                    android:layout_marginTop="@dimen/medium_margin"
                    app:layout_constraintTop_toBottomOf="@id/address_linear_layout"
                    tools:context="com.example.kotlindemos.BasicMapDemoActivity" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>